<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.view.ui.auth.LoginFragment">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/splash_icon" />

    <TextView
        android:id="@+id/tv_register_title"
        style="@style/TextAppearance.Material3.HeadlineLarge"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/iv_logo"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        tools:text="Sign Up" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_email"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="24dp"
        app:errorTextColor="@color/red_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_register_title"
        tools:hint="Email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ti_password"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        app:errorTextColor="@color/red_error"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ti_email"
        app:passwordToggleEnabled="true"
        tools:hint="Password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLength="12" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        app:layout_constraintEnd_toEndOf="@id/ti_password"
        app:layout_constraintStart_toStartOf="@id/ti_password"
        app:layout_constraintTop_toBottomOf="@id/ti_password"
        tools:text="Sign Up" />

    <TextView
        android:id="@+id/tv_t_n_c"
        style="@style/TextAppearance.Material3.BodyMedium"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:paddingHorizontal="25dp"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_register"
        tools:text="By signing up, you have agreed to MovMent\'s \nTerms and Conditions &amp; Privacy Policy." />

    <TextView
        android:id="@+id/tv_not_new_to_movment"
        style="@style/TextAppearance.Material3.LabelLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_t_n_c"
        tools:text="Already have an account?" />

    <TextView
        android:id="@+id/tv_to_login"
        style="@style/TextAppearance.Material3.LabelLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:clickable="true"
        android:focusable="true"
        android:textColor="?attr/colorTertiary"
        app:layout_constraintBottom_toBottomOf="@id/tv_not_new_to_movment"
        app:layout_constraintStart_toEndOf="@id/tv_not_new_to_movment"
        app:layout_constraintTop_toTopOf="@id/tv_not_new_to_movment"
        tools:text="Sign in here!" />

    <View
        android:id="@+id/loading_overlay"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/loading_greyed"
        android:visibility="gone" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/loading_anim"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/loading_animation" />

</androidx.constraintlayout.widget.ConstraintLayout>